# safe-chat-slack-bot

./: .dockerignore  .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.PTBR.md  README.md  SECURITY.md  _config.yml  docker-compose.yml  env.template  logging.conf  manifest.json  pyproject.toml  settings.conf  sitemap.xml
.docs/_plugins/: sitemap_fix.rb
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE
.github/ISSUE_TEMPLATE/: 1-question.md  2-bug-report.md  3-feature-request.md
.github/workflows/: jekyll-gh-pages.yml  pull_request.yml
src/: bot.py  main.py
src/config/: language.py  settings.py
src/listeners/: register.py
src/listeners/messages/: message_changed.py  regex_message.py
src/locales/en/LC_MESSAGES/: base.po
src/locales/pt_BR/LC_MESSAGES/: base.po
src/messages/: constants.py
src/rules/: constants.py  pattern.py
tests/: test_main.py
tests/config/: settings_to_test.conf  test_language.py  test_settings.py
tests/listeners/: test_message_changed.py
tests/rules/: test_pattern.py
