[tool.poetry]
name = "safe-chat-slack-bot"
version = "0.1.0"
description = "SafeChat Slack Bot is an open-source project designed to enhance data security within Slack workspaces"
authors = ["Marciel Torres <marcielribeirotorres@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
slack-bolt = "1.23.0"
aiohttp = "3.12.14"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
ruff = "^0.12.1"

[tool.pytest.ini_options]
testpaths = ["tests",]
pythonpath = ["src",]

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "src/bot.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "S"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
